# Job-Mail-and-analysis-agent

./: .gitignore  LICENSE  README.md  agent-2.ipynb  agent-3.ipynb  agent-4.py  agent.ipynb  pyproject.toml  requirements.txt  resume_config.json
