[project]
name = "mcp-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.16",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.178.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-search-results>=2.4.2",
    "langchain>=0.3.27",
    "langchain-brightdata>=0.1.3",
    "langchain-community>=0.3.27",
    "langchain-google-community[gmail]>=2.0.7",
    "langchain-google-genai>=2.1.9",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.6.4",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "proto-plus>=1.26.1",
    "protobuf>=6.31.1",
    "prototype>=0.2",
    "pydantic>=2.11.7",
    "pypdf>=5.9.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "secure-smtplib>=0.1.1",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.48.0",
    "streamlit-chat>=0.1.1",
    "typing-extensions>=4.14.1",
]
